# image-to-web-design

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/research/: 2026-05-12-vision-validation-report.md  2026-06-07-opus48-coordinate-accuracy.md
docs/superpowers/plans/: 2026-05-21-image-primitives-implementation.md  2026-05-25-image-to-web-design-chatgpt.md
docs/superpowers/plans/image-cut/: 2026-05-11-image-cut-tools.md
docs/superpowers/specs/: 2026-05-21-image-primitives-design.md  2026-05-25-image-to-web-design-chatgpt-design.md
docs/superpowers/specs/image-cut/: 2026-05-11-image-cut-skill-design.md
skills/image-cut/: SKILL.md  create_dummy_image.py  find_red_dot.py  find_red_rect.py  look-prep-claude.py  pyproject.toml  un-look-prep-claude.py
skills/image-cut/scripts/: _disambig.py  _disambig2.py  _disambig3.py  _finalgaps.py  _gaps.py  _stress.py  _validate_haiku.py  size_sweep.py  validate_vision.py
skills/image-cut/scripts/_validate_out/: results.json
skills/image-cut/tests/: conftest.py  test_common.py  test_convert.py  test_crop.py  test_info.py  test_pad.py  test_points.py  test_prep.py  test_resize.py  test_translate.py  test_vision_prep.py
skills/image-cut/tools/: _common.py  convert.py  info.py  pad.py  points.py  prep.py  prep_claude.py  resize.py  resolve_coords.py  resolve_coords_claude.py  translate.py  vision_prep.py
skills/image-edit-instruction/: SKILL.md
skills/image-isolation-technique/: SKILL.md
skills/image-isolation-technique/_examples/: outpaint_mask.py
skills/image-to-web-design/: SKILL.md
skills/image-to-web-design-chatgpt/: SKILL.md  pyproject.toml
skills/image-to-web-design-chatgpt/tests/: conftest.py  test_tools_help.py  test_vision_prep.py
skills/image-to-web-design-chatgpt/tools/: _common.py  crop.py  vision_prep.py
tests/: test_outpaint_mask.py
