[project]
name = "image-to-web-design-kit"
version = "0.1.0"
description = "A kit of small skills for converting design images into pixel-perfect React webpages. Includes an atomic image-edit primitive, isolation recipes, an orchestrator, and the image-cut tools."
requires-python = ">=3.10"
dependencies = ["Pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests", "skills/image-cut/tests"]
pythonpath = [".", "skills/image-cut"]
