[project]
name = "image-cut"
version = "0.1.0"
description = "Image cutting tools for agent-driven pixel-perfect HTML rebuilds"
requires-python = ">=3.10"
dependencies = ["Pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
