[project]
name = "image-to-web-design-chatgpt"
version = "0.1.0"
description = "Self-contained ChatGPT-tuned skill for converting design images into React components."
requires-python = ">=3.10"
dependencies = ["Pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
